--- a/src/components/styles/Projects.scss
+++ b/src/components/styles/Projects.scss
@@ -207,6 +207,8 @@
     .close-button {
     top: 10px;
     right: 10px;
+    width: 20px;
+    height: 20px;
   
         &:hover {
             background-color: #444;
